--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link" href="#">Home</a>
+    <a class="nav-link text-light" href="#">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link active" routerLink="/inicio">Iniciar Sesion</a>
+    <a class="nav-link active text-light" routerLink="/inicio">Iniciar Sesion</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/registro">Registrarse</a>
+    <a class="nav-link text-light" routerLink="/registro">Registrarse</a>
   </li>
 </ul>
 <router-outlet></router-outlet>
