--- a/src/app/vistas/registro/registro.component.html
+++ b/src/app/vistas/registro/registro.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <h2>Registrase en la Biblioteca</h2>
+            <h2>Registrarse en la Biblioteca</h2>
             <form [formGroup]="formulario" (ngSubmit)="anadirFormulario()">
 
                 <div class="form-group">
