--- a/src/app/vistas/menu/menu.component.html
+++ b/src/app/vistas/menu/menu.component.html
@@ -3,7 +3,10 @@
         <div class="col-4"></div>
         <div class="col-4">
             <h2>Bienvenido {{usuario.nombreUsuario}} {{usuario.apellidosUsuario}}</h2>
-            <h3>Sesion Iniciada Como: {{usuario.acceso}}</h3>
+            <h3>Sesion Iniciada Como: {{usuario.acceso?.codigoAcceso}}</h3>
+            <div>
+
+            </div>
         </div>
         <div class="col-4"></div>
     </div>
