--- a/src/app/vistas/menu/menu.component.html
+++ b/src/app/vistas/menu/menu.component.html
@@ -5,7 +5,37 @@
             <h2>Bienvenido {{usuario.nombreUsuario}} {{usuario.apellidosUsuario}}</h2>
             <h3>Sesion Iniciada Como: {{usuario.acceso?.codigoAcceso}}</h3>
             <div>
-
+                <h2 id="user">Usuarios Registrados</h2>
+                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                  
+                    <!-- DNI Column -->
+                    <ng-container matColumnDef="dniUsuario">
+                      <th mat-header-cell *matHeaderCellDef> DNI </th>
+                      <td mat-cell *matCellDef="let element"> {{element.dniUsuario}} </td>
+                    </ng-container>
+                  
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="nombreUsuario">
+                      <th mat-header-cell *matHeaderCellDef> Name </th>
+                      <td mat-cell *matCellDef="let element"> {{element.nombreUsuario}} </td>
+                    </ng-container>
+                  
+                    <!-- Apellidos Column -->
+                    <ng-container matColumnDef="apellidosUsuario">
+                      <th mat-header-cell *matHeaderCellDef> Apellidos </th>
+                      <td mat-cell *matCellDef="let element"> {{element.apellidosUsuario}} </td>
+                    </ng-container>
+                  
+                    <!-- Teléfono Column -->
+                    <ng-container matColumnDef="tlfUsuario">
+                      <th mat-header-cell *matHeaderCellDef> Teléfono </th>
+                      <td mat-cell *matCellDef="let element"> {{element.tlfUsuario}} </td>
+                    </ng-container>
+                  
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  </table>
+                  
             </div>
         </div>
         <div class="col-4"></div>
